@@ -84,14 +84,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
 
-                <configuration>
-              
-               
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
-
+             
             </plugin>
 
             <!-- JaCoCo Plugin -->
